--- a/Readme
+++ b/Readme
@@ -1,3 +1,7 @@
+Legacy Project (2002) - This was my second attempt at openGL programming. It involves a 3D world that you can move around in using the arrow keys. Fog and Lights can be turned on and off. It features rudimentary collision detection, and an imported 3D Studio Max chair model.
+
+--------------------------
+
 Greg Bender
 Project 4
 
